  Code cleanup: replace magic number 2 with NUMFLOPPIES. (RFB)

2012-12-18
- bios/bios.c: Fixed wrong charset in multilanguage builds when the _AKP
  cookie is initialized from the NVRAM (ex: wrong Spanish accents). (VRI)
- bios/serport.c: Fixed compilation warnings with "make aranym". (VRI)

2012-12-19
- bios/delay.c: Use __mcoldfire__ instead of MACHINE_FIREBEE. (RFB)
- bios/bios.c: Fixed regression on default interrupt handlers. At least
  ARAnyM's network and fVDI driver requires INT3 handler to be initialized
  with a simple RTE, otherwise they crashes with "Exception number 27". (VRI)
- bios/*: Use again 0xffffxxxx instead of 0x00ffxxxx to access I/O registers.
  The hardware supports both, but 0xffffxxxx allows the .w optimization. (VRI)
- bios/blkdev.c: Fixed latent bug in blkdev_rwabs() when transferring
  >32767 sectors. (RFB)
- bios/floppy.c: Fixed compilation for non-Atari hardware. (VRI)
- bios/serport.c: Fixed test on wrong define in rsconfTT(). (VRI)
- bios/serport.c: Fixed warning about rsconfTT() with "make aranym". (VRI)
- bios/serport.c bios/startup.S: Moved read-only data to TEXT segment. (VRI)
- bios/machine.c: Set the Falcon Bus Control Register on the FireBee. (VRI)
- bios/machine.c: Added guess_machine_name(). (VRI)
- *: Added the MAYBE_UNUSED() macro. (VRI)

2012-12-20
- bios/serport.c bios/serport.h bios/xbios.c: Refactored serial port support
  for better readability with conditional compilation. (VRI)

2012-12-23
- bios/chardev.c bios/serport.c bios/serport.h xbios.c: Reverted previous
  update because EmuTOS RAM did not work on real Falcon. (RFB)

2012-12-25
- bios/chardev.c: Added const to vector initialisation arrays. (RFB)

2012-12-30
- bios/ctrycodes.h: Fixed Slovakia, Greece and Russia country codes. (VRI)
- bios/ikbd.c: Fixed welcome screen key repeat bug with FreeMiNT. (VRI)

2012-12-31
- bios/serport.c bios/serport.h: Refactored serial port support, based on
  previous patch by Vincent Riviere. (RFB)