@@ -252,12 +252,14 @@ static void flop_add_drive(WORD dev)
 
     /* Physical block device */
     devices[dev].valid = 1;
+    devices[dev].byteswap = 0;      /* floppies are never byteswapped */
     devices[dev].pssize = SECTOR_SIZE;  /* default */
     devices[dev].size = 0;          /* unknown size */
     devices[dev].last_access = 0;   /* never accessed */
 
     /* Logical block device */
     blkdev[dev].valid = 1;
+    blkdev[dev].byteswap = 0;       /* floppies are never byteswapped */
     blkdev[dev].mediachange = MEDIACHANGE;
     blkdev[dev].start = 0;
     blkdev[dev].size = 0;           /* unknown size */
